try fix problem with images not showing on deployed website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,11 @@ h1 {
     text-align: justify;
 }
 
+.sample-activities h2 {
+    font-family: 'Amatic SC', sans-serif;
+    font-size: ;
+}
+
 .small-gallery {
     width: 100%;
     display: flex;
